修复Component未注入全局混合的bug

--- a/app/app.json
+++ b/app/app.json
@@ -1,12 +1,13 @@
 {
     "pages": [
         "pages/index/index",
+        "pages/demo/index",
         "pages/web-view/index"
     ],
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#ffffff",
-        "navigationBarTitleText": "wxMiniPro",
+        "navigationBarTitleText": "LWX",
         "navigationBarTextStyle": "black"
     },
     "navigateToMiniProgramAppIdList": [],
